Working on Custom Transaction Swagger
