# routes/v1/index.js
@@ -4,6 +4,7 @@ let walletRouter = require('./custodialWallet');
 let ethersRouter = require('./ethers');
 let fungibleTokenRouter = require('./fungibleToken');
 let clientRouter = require('./client');
+let customTransactionRouter = require('./customTransaction');
 let { sendResponse } = require('../../services/commonResponse');
 
 let router = express.Router();
@@ -16,6 +17,7 @@ router.get('/', function (req, res, next) {
 router.use('/custodialWallet', walletRouter);
 router.use('/ethers', ethersRouter);
 router.use('/fungibleToken', fungibleTokenRouter);
+router.use('/customTransaction', customTransactionRouter);
 router.use('/client', clientRouter);
 
 module.exports = router;
